<resources>
    <string name="app_name">RecyclerView</string>
    <string name="call">Call</string>
    <string name="contacts">Contacts</string>
    <string name="text">Text</string>
</resources>